--- a/positionAndStructure/pageOne.html
+++ b/positionAndStructure/pageOne.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Don't use "./" because WEB 4 does not have this root as the actual root -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Page One</title>
   </head>
   <body>
     <div class="p1Wrapper">
